# jackbranchdev3

./: .gitignore  Cargo.toml  README.md  tailwind.config.js
blog/: go_http_htmx.md  hello_world.md  hello_world_2.md
generation/: Cargo.toml
generation/src/: generator.rs  lib.rs
jackbranchdev/: Cargo.toml  build.rs
jackbranchdev/public/blog/: go_htmx_tailwind.html  hello_world.html  hello_world_2.html
jackbranchdev/public/styles/: twout.css
jackbranchdev/public/templates/: base.html  blog.html  index.html
jackbranchdev/src/: main.rs  posts.rs
