[package]
name = "jackbranchdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
axum = "0.7.5"
generation = { path = "../generation" }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
generation = { path = "../generation" }
gray_matter = "0.2.6"
markdown = "1.0.0-alpha.16"
serde = "1.0.197"
regex = "1.5"
